--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
             <section class="education">
                 <h2 class="title education__title" id="education">Education</h2>
                 <p>College of mehenical-technology, Pedagogical university.</p>
+                <a class="education__certificate" href="https://app.rs.school/certificate/vk4ud12h">CERTIFICATE THE
+                    ROLLING SCOPES
+                    SCHOOL</a>
             </section>
             <section class="languages">
                 <h2 class="title languages__title" id="languages">Languages</h2>
