add slider in project list

--- a/index.html
+++ b/index.html
@@ -114,6 +114,9 @@
                             href="https://rolling-scopes-school.github.io/oleegg-JSFE2022Q1/shelter/pages/main">Shelter-site
                             in developing</a>
                     </li>
+                    <li class="project-li"><a href="https://oleegg.github.io/cssMemSlider/cssMemSlider/">
+                            Slider without js</a>
+                    </li>
                 </ul>
             </section>
             <section class="education">
