add any progect

--- a/index.html
+++ b/index.html
@@ -65,26 +65,26 @@
                 <ul class="skills__list">
                     <li><svg class="icon-logo">
                             <use xlink:href="./assets/svg-png/sprite.svg#html"></use>
-                        </svg> HTML</li>
+                        </svg>HTML</li>
 
                     <li><svg class="icon-logo">
                             <use xlink:href="./assets/svg-png/sprite.svg#css"></use>
-                        </svg> CSS, SCSS</li>
+                        </svg>CSS, SCSS</li>
 
                     <li><svg class="icon-logo">
                             <use xlink:href="./assets/svg-png/sprite.svg#js"></use>
-                        </svg> JS</li>
+                        </svg>JS</li>
 
                     <li><svg class="icon-logo">
                             <use xlink:href="./assets/svg-png/sprite.svg#git"></use>
-                        </svg> Git</li>
+                        </svg>Git</li>
 
                     <li><svg class="icon-logo">
                             <use xlink:href="./assets/svg-png/sprite.svg#react"></use>
-                        </svg> basics React js</li>
+                        </svg>React js</li>
                     <li><svg class="icon-logo">
                             <use xlink:href="./assets/svg-png/sprite.svg#ts"></use>
-                        </svg> basic TypeScript</li>
+                        </svg>TypeScript</li>
                 </ul>
             </section>
             <section class="hobby">
@@ -104,18 +104,33 @@
                 <h2 class="title projects__title" id="projects">Projects</h2>
                 <ul>
                     <li class="project-li"><a
-                            href="https://rolling-scopes-school.github.io/oleegg-JSFEPRESCHOOL/portfolio/">Portfolio (RS
-                            school-progect + <br>custom video player)</a>
-                    </li>
-                    <li class="project-li"><a
                             href="https://rolling-scopes-school.github.io/oleegg-JSFEPRESCHOOL/game">little GAME JS</a>
-                    </li>
+                            </li>
+                            <li class="project-li"><a
+											href="https://rolling-scopes-school.github.io/oleegg-JSFEPRESCHOOL/portfolio/">Portfolio (RS
+											school-progect + <br>custom video player)</a>
+											</li>
                     <li class="project-li"><a
                             href="https://rolling-scopes-school.github.io/oleegg-JSFE2022Q1/shelter/pages/main">Shelter-site
                             in developing</a>
                     </li>
-                    <li class="project-li"><a href="https://oleegg.github.io/cssMemSlider/cssMemSlider/">
-                            Slider without js</a>
+                    <li class="project-li">
+                    	<a href="https://oleegg.github.io/virtual-keyboard/src/">
+                    		Virtual keyboard</a>
+                    </li>
+                    <li class="project-li">
+                    	<a href="https://rolling-scopes-school.github.io/oleegg-JSFE2022Q1/race/">
+                    		Racing (Rest API) </a>
+                    	<p class="project-li-text">для того чтоб работало необходимо локально развернуть</p>
+                    	<a href="https://github.com/Oleegg/async-race-api-server"> сервер </a>
+                    </li>
+                    <li class="project-li">
+                    	<a href="https://rolling-scopes-school.github.io/oleegg-JSFE2022Q1/online-store/">
+                    		online-store and Filters</a>
+                    </li>
+                    <li class="project-li"><a href="https://rs-lang-2.netlify.app/">
+                    		RS lang (React) </a>
+                    	<p class="project-li-text">еще не закончено</p>
                     </li>
                 </ul>
             </section>
