feta: change english level

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     </li>
                     <li class="project-li"><a href="https://rs-lang-2.netlify.app/">
                     		RS lang (React) </a>
-                    	<p class="project-li-text">еще не закончено</p>
+                    	<p class="project-li-text">была команда из 3 человек(но делали 2) не закончено</p>
                     </li>
                 </ul>
             </section>
@@ -145,7 +145,7 @@
                 <h2 class="title languages__title" id="languages">Languages</h2>
                 <ul class="languages__list">
                     <li>Russian - native</li>
-                    <li>A1, I'm studying English</li>
+                    <li>A2, I'm studying English</li>
                 </ul>
             </section>
         </div>
