fix: about part

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     years of experience. Now I'm studying to be a programmer. In my work, I strive to thoroughly
                     understand the task at hand in order to complete it as well as possible.
                     Responsible and conscientious. Made adaptive layout, custom video and audio players, light games
-                    like tic-tac-toe. Familiar with server requests.
+                    like tic-tac-toe. Familiar with server requests, Webpack, React. I can organize myself.
                     I am married, and I have two sons.</p>
             </section>
             <section class="skills">
