--- a/index.html
+++ b/index.html
@@ -52,13 +52,10 @@
             </section>
             <section class="about">
                 <h2 class="title about__title" id="about">About me</h2>
-                <p class="about__text">Engineer for alarm systems, fire alarm systems, urveillance and access control
-                    systems, with over 10
-                    years of experience. Now I'm studying to be a programmer. In my work, I strive to thoroughly
-                    understand the task at hand in order to complete it as well as possible.
-                    Responsible and conscientious. Made adaptive layout, custom video and audio players, light games
-                    like tic-tac-toe. Familiar with server requests, Webpack, React. I can organize myself.
-                    I am married, and I have two sons.</p>
+                <p class="about__text">I started learning JavaScript 2 years ago, after that I completed courses
+                	at RS-School (9 months). I have solid knowledge in JS, TS, adaptive layout, made projects with
+                	Rest API and ReactJS. More than 10 years of experience of engineers in Beltelecom.
+                	Responsible, conscientious and self-organized. I am married and have two sons.</p>
             </section>
             <section class="skills">
                 <h2 class="title skills__title" id="skills">Skills</h2>
@@ -130,7 +127,6 @@
                     </li>
                     <li class="project-li"><a href="https://rs-lang-2.netlify.app/">
                     		RS lang (React) </a>
-                    	<p class="project-li-text">была команда из 3 человек(но делали 2) не закончено</p>
                     </li>
                 </ul>
             </section>
