--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <li class="project-li">
                     	<a href="https://rolling-scopes-school.github.io/oleegg-JSFE2022Q1/race/">
                     		Racing (Rest API) </a>
-                    	<p class="project-li-text">для того чтоб работало необходимо локально развернуть</p>
+                    	<p class="project-li-text">для работы приложения необходимо развернуть</p>
                     	<a href="https://github.com/Oleegg/async-race-api-server"> сервер </a>
                     </li>
                     <li class="project-li">
