--- a/index.html
+++ b/index.html
@@ -141,10 +141,16 @@
             </section>
             <section class="education">
                 <h2 class="title education__title" id="education">Education</h2>
-                <p>College of mehenical-technology, Pedagogical university.</p>
-                <a class="education__certificate" href="https://app.rs.school/certificate/vk4ud12h">CERTIFICATE THE
-                    ROLLING SCOPES
-                    SCHOOL</a>
+                <p>College of mehenical-technology</p>
+                <p>Pedagogical university</p>
+                <a href="https://app.rs.school/certificate/vk4ud12h" class="education__certif-wrapp">
+                	<p>preliminary level certificate</p>
+                	<div class="education__certificate"></div>
+                </a>
+                <a href="https://app.rs.school/certificate/8zh94oxo" class="education__certif-wrapp">
+                	<p>JS core course certificate</p>
+                	<div class="education__certificate"></div>
+                </a>
             </section>
             <section class="languages">
                 <h2 class="title languages__title" id="languages">Languages</h2>
