fix: add about me text

--- a/index.html
+++ b/index.html
@@ -52,10 +52,11 @@
             </section>
             <section class="about">
                 <h2 class="title about__title" id="about">About me</h2>
-                <p class="about__text">I started learning JavaScript 2 years ago, after that I completed courses
-                	at RS-School (9 months). I have solid knowledge in JS, TS, adaptive layout, made projects with
-                	Rest API and ReactJS. More than 10 years of experience of engineers in Beltelecom.
-                	Responsible, conscientious and self-organized. I am married and have two sons.</p>
+                <p class="about__text">I started learning JavaScript 2 years ago, after that I took courses at
+                  RS-School (9 months). I have solid knowledge of JS, TS, adaptive layout, I have done projects
+                  with Rest API and ReactJS. Now I'm studying NodeJS + Express. Beltelecom engineers have more
+                  than 10 years of experience. Responsible, conscientious and self-organized. I am married and
+                  have two sons.</p>
             </section>
             <section class="skills">
                 <h2 class="title skills__title" id="skills">Skills</h2>
