--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
                     <li><svg class="icon-logo">
                     		<use xlink:href="./assets/svg-png/sprite.svg#lint"></use>
                     	</svg>ESLint/Prettier</li>
+                    <li><svg class="icon-logo">
+                        <use xlink:href="./assets/svg-png/sprite.svg#jest"></use>
+                      </svg>elementary Jest + React Testing Library</li>
                 </ul>
             </section>
             <section class="hobby">
