--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="my__wrapp">
                     <div class="title-wrapp">
                         <h1 class="my__name">Senko Oleg</h1>
-                        <h3 class="my__profession">Junior Front-end Developer</h3>
+                        <h3 class="my__profession">Junior Frontend Developer</h3>
                     </div>
                     <nav class="nav">
                         <ul class="nav__links">
