--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                         <h3 class="my__profession">Junior Frontend Developer</h3>
                     </div>
                     <nav class="nav">
+                      <div class="bloor">
                         <ul class="nav__links">
                             <li><a href="#contacts">Contacts</a></li>
                             <li><a href="#about">About me</a></li>
@@ -30,6 +31,7 @@
                             <li><a href="#education">Education</a></li>
                             <li><a href="#languages">Languages</a></li>
                         </ul>
+                      </div>
                     </nav>
                     <div class="burger">
                         <span class="burger__span"></span>
@@ -53,8 +55,8 @@
             <section class="about">
                 <h2 class="title about__title" id="about">About me</h2>
                 <p class="about__text">I started learning JavaScript 2 years ago, after that I took courses at
-                  RS-School (9 months). I have solid knowledge of JS, TS, adaptive layout, I have done projects
-                  with Rest API and ReactJS. Now I'm studying NodeJS + Express. Beltelecom engineers have more
+                  RS-School (9 months). I have solid knowledge of JS, TS, ReactJS + tests, HTML, CSS, adaptive layout. I
+                  have done projects with Rest API. Now I'm studying NodeJS + Express. Beltelecom engineers have more
                   than 10 years of experience. Responsible, conscientious and self-organized. I am married and
                   have two sons.</p>
             </section>
@@ -64,37 +66,33 @@
                     <li><svg class="icon-logo">
                             <use xlink:href="./assets/svg-png/sprite.svg#html"></use>
                         </svg>HTML</li>
-
-                    <li><svg class="icon-logo">
+                    <li><svg class="icon-logo icon-logo-1">
                             <use xlink:href="./assets/svg-png/sprite.svg#css"></use>
                         </svg>CSS, SCSS</li>
-
-                    <li><svg class="icon-logo">
+                    <li><svg class="icon-logo icon-logo-2">
                             <use xlink:href="./assets/svg-png/sprite.svg#js"></use>
                         </svg>JS</li>
-
-                    <li><svg class="icon-logo">
-                            <use xlink:href="./assets/svg-png/sprite.svg#git"></use>
-                        </svg>Git</li>
-
-                    <li><svg class="icon-logo">
+                    <li><svg class="icon-logo icon-logo-3">
                             <use xlink:href="./assets/svg-png/sprite.svg#react"></use>
                         </svg>React js</li>
-                    <li><svg class="icon-logo">
+                    <li><svg class="icon-logo icon-logo-4">
                             <use xlink:href="./assets/svg-png/sprite.svg#ts"></use>
                         </svg>TypeScript</li>
-                    <li><svg class="icon-logo">
+                    <li><svg class="icon-logo icon-logo-5">
+                        <use xlink:href="./assets/svg-png/sprite.svg#git"></use>
+                      </svg>Git</li>
+                    <li><svg class="icon-logo icon-logo-6">
                     		<use xlink:href="./assets/svg-png/sprite.svg#webpack"></use>
                     	</svg>Webpack</li>
-                    <li><svg class="icon-logo">
+                    <li><svg class="icon-logo icon-logo-7">
                     		<use xlink:href="./assets/svg-png/sprite.svg#mongo"></use>
                     	</svg>MongoDB</li>
-                    <li><svg class="icon-logo">
+                    <li><svg class="icon-logo icon-logo-8">
                     		<use xlink:href="./assets/svg-png/sprite.svg#lint"></use>
                     	</svg>ESLint/Prettier</li>
-                    <li><svg class="icon-logo">
+                    <li><svg class="icon-logo icon-logo-9">
                         <use xlink:href="./assets/svg-png/sprite.svg#jest"></use>
-                      </svg>elementary Jest + React Testing Library</li>
+                      </svg>Jest + React Testing Library</li>
                 </ul>
             </section>
             <section class="hobby">
@@ -168,7 +166,7 @@
     <footer class="footer">
         <div class="wrapper">
             <div class="footer__content">
-                <p>2022 <a class="github" href="https://github.com/Oleegg">Oleegg</a></p>
+                <p>2020 <a class="github" href="https://github.com/Oleegg">Oleegg</a></p>
             </div>
             <a href="#" class="icon-logo-arr"><svg>
                     <use xlink:href="./assets/svg-png/sprite.svg#arrow"></use>
