--- a/index.html
+++ b/index.html
@@ -2,178 +2,180 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/normalize.css">
-    <link rel="stylesheet" href="./styles/style.css">
-    <title>Senko Oleg</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./styles/style.css">
+  <title>Senko Oleg</title>
 </head>
 
 <body>
-    <header class="header">
-        <div class="wrapper">
-            <div class="my">
-                <img class="my__photo" src="./assets/my-pfoto/IMG_20191231_195230.jpg" alt="my-photo">
-                <div class="my__wrapp">
-                    <div class="title-wrapp">
-                        <h1 class="my__name">Senko Oleg</h1>
-                        <h3 class="my__profession">Junior Frontend Developer</h3>
-                    </div>
-                    <nav class="nav">
-                      <div class="bloor">
-                        <ul class="nav__links">
-                            <li><a href="#contacts">Contacts</a></li>
-                            <li><a href="#about">About me</a></li>
-                            <li><a href="#skills">Skills</a></li>
-                            <li><a href="#hobby">Hobby</a></li>
-                            <li><a href="#projects">Projects</a></li>
-                            <li><a href="#education">Education</a></li>
-                            <li><a href="#languages">Languages</a></li>
-                        </ul>
-                      </div>
-                    </nav>
-                    <div class="burger">
-                        <span class="burger__span"></span>
-                    </div>
-                </div>
+  <header class="header">
+    <div class="wrapper">
+      <div class="my">
+        <img class="my__photo" src="./assets/my-pfoto/i111.jpg" alt="my-photo">
+        <div class="my__wrapp">
+          <div class="title-wrapp">
+            <h1 class="my__name">Senko Oleg</h1>
+            <h3 class="my__profession">Frontend Developer</h3>
+          </div>
+          <nav class="nav">
+            <div class="bloor">
+              <ul class="nav__links">
+                <li><a href="#contacts">Contacts</a></li>
+                <li><a href="#about">About me</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#hobby">Hobby</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#education">Education</a></li>
+                <li><a href="#languages">Languages</a></li>
+              </ul>
             </div>
+          </nav>
+          <div class="burger">
+            <span class="burger__span"></span>
+          </div>
+        </div>
+      </div>
 
-        </div>
-    </header>
-    <main class="main">
-        <div class="wrapper main__wrapp">
-            <section class="contacts">
-                <h2 class="title contacts__title" id="contacts">Contacts</h2>
-                <ul class="contacts__list">
-                    <li>Minsk Belarus</li>
-                    <li>phone: +375 29 7631758 (Viber)</li>
-                    <li>email: senkooleg@gmail.com</li>
-                    <li>discord: OlegMinsk(@Oleegg)</li>
-                </ul>
-            </section>
-            <section class="about">
-                <h2 class="title about__title" id="about">About me</h2>
-                <p class="about__text">I started learning JavaScript 2 years ago, after that I took courses at
-                  RS-School (9 months). I have solid knowledge of JS, TS, ReactJS + tests, HTML, CSS, adaptive layout. I
-                  have done projects with Rest API. Now I'm studying NodeJS + Express. Beltelecom engineers have more
-                  than 10 years of experience. Responsible, conscientious and self-organized. I am married and
-                  have two sons.</p>
-            </section>
-            <section class="skills">
-                <h2 class="title skills__title" id="skills">Skills</h2>
-                <ul class="skills__list">
-                    <li><svg class="icon-logo">
-                            <use xlink:href="./assets/svg-png/sprite.svg#html"></use>
-                        </svg>HTML</li>
-                    <li><svg class="icon-logo icon-logo-1">
-                            <use xlink:href="./assets/svg-png/sprite.svg#css"></use>
-                        </svg>CSS, SCSS</li>
-                    <li><svg class="icon-logo icon-logo-2">
-                            <use xlink:href="./assets/svg-png/sprite.svg#js"></use>
-                        </svg>JS</li>
-                    <li><svg class="icon-logo icon-logo-3">
-                            <use xlink:href="./assets/svg-png/sprite.svg#react"></use>
-                        </svg>React js</li>
-                    <li><svg class="icon-logo icon-logo-4">
-                            <use xlink:href="./assets/svg-png/sprite.svg#ts"></use>
-                        </svg>TypeScript</li>
-                    <li><svg class="icon-logo icon-logo-5">
-                        <use xlink:href="./assets/svg-png/sprite.svg#git"></use>
-                      </svg>Git</li>
-                    <li><svg class="icon-logo icon-logo-6">
-                    		<use xlink:href="./assets/svg-png/sprite.svg#webpack"></use>
-                    	</svg>Webpack</li>
-                    <li><svg class="icon-logo icon-logo-7">
-                    		<use xlink:href="./assets/svg-png/sprite.svg#mongo"></use>
-                    	</svg>MongoDB</li>
-                    <li><svg class="icon-logo icon-logo-8">
-                    		<use xlink:href="./assets/svg-png/sprite.svg#lint"></use>
-                    	</svg>ESLint/Prettier</li>
-                    <li><svg class="icon-logo icon-logo-9">
-                        <use xlink:href="./assets/svg-png/sprite.svg#jest"></use>
-                      </svg>Jest + React Testing Library</li>
-                </ul>
-            </section>
-            <section class="hobby">
-                <h2 class="title hobby__title" id="hobby">Hobby</h2>
-                <ul class="hobby__list">
-                    <li>Active rest
-                        <ul class="active__rest">
-                            <li>kayaks</li>
-                            <li>bicycles</li>
-                            <li>volleyball</li>
-                        </ul>
-                    <li>RC cars</li>
-                    <li>computer games</li>
-                </ul>
-            </section>
-            <section class="projects">
-                <h2 class="title projects__title" id="projects">Projects</h2>
-                <ul>
-                    <li class="project-li"><a
-                            href="https://rolling-scopes-school.github.io/oleegg-JSFEPRESCHOOL/game">little GAME JS</a>
-                            </li>
-                            <li class="project-li"><a
-											href="https://rolling-scopes-school.github.io/oleegg-JSFEPRESCHOOL/portfolio/">Portfolio (RS
-											school-progect + <br>custom video player)</a>
-											</li>
-                    <li class="project-li"><a
-                            href="https://rolling-scopes-school.github.io/oleegg-JSFE2022Q1/shelter/pages/main">Shelter-site
-                            in developing</a>
-                    </li>
-                    <li class="project-li">
-                    	<a href="https://oleegg.github.io/virtual-keyboard/src/">
-                    		Virtual keyboard</a>
-                    </li>
-                    <li class="project-li">
-                    	<a href="https://rolling-scopes-school.github.io/oleegg-JSFE2022Q1/race/">
-                    		Racing (Rest API) </a>
-                    	<p class="project-li-text">для работы приложения необходимо развернуть</p>
-                    	<a href="https://github.com/Oleegg/async-race-api-server"> сервер </a>
-                    </li>
-                    <li class="project-li">
-                    	<a href="https://rolling-scopes-school.github.io/oleegg-JSFE2022Q1/online-store/">
-                    		online-store and Filters</a>
-                    </li>
-                    <li class="project-li"><a href="https://rs-lang-2.netlify.app/">
-                    		RS lang (React) </a>
-                    </li>
-                </ul>
-            </section>
-            <section class="education">
-                <h2 class="title education__title" id="education">Education</h2>
-                <p>College of mehenical-technology</p>
-                <p>Pedagogical university</p>
-                <a href="https://app.rs.school/certificate/vk4ud12h" class="education__certif-wrapp">
-                	<p>preliminary level certificate</p>
-                	<div class="education__certificate"></div>
-                </a>
-                <a href="https://app.rs.school/certificate/8zh94oxo" class="education__certif-wrapp">
-                	<p>JS core course certificate</p>
-                	<div class="education__certificate"></div>
-                </a>
-            </section>
-            <section class="languages">
-                <h2 class="title languages__title" id="languages">Languages</h2>
-                <ul class="languages__list">
-                    <li>Russian - native</li>
-                    <li>A2, I'm studying English</li>
-                </ul>
-            </section>
-        </div>
-    </main>
-    <footer class="footer">
-        <div class="wrapper">
-            <div class="footer__content">
-                <p>2020 <a class="github" href="https://github.com/Oleegg">Oleegg</a></p>
-            </div>
-            <a href="#" class="icon-logo-arr"><svg>
-                    <use xlink:href="./assets/svg-png/sprite.svg#arrow"></use>
-                </svg></a>
-        </div>
-    </footer>
-    <script src="./index.js"></script>
+    </div>
+  </header>
+  <main class="main">
+    <div class="wrapper main__wrapp">
+      <section class="contacts">
+        <h2 class="title contacts__title" id="contacts">Contacts</h2>
+        <ul class="contacts__list">
+          <li>Minsk Belarus</li>
+          <li>phone: +375 29 7631758 (Viber)</li>
+          <li>email: senkooleg@gmail.com</li>
+          <li>discord: OlegMinsk(@Oleegg)</li>
+        </ul>
+      </section>
+      <section class="about">
+        <h2 class="title about__title" id="about">About me</h2>
+        <p class="about__text">I've been studying Javascript since 2020, graduated from RSSchool frontend development
+          course. Studied HTML, CSS/SCSS, JS/TS, React, NodeJS, PostgreSQL/MongoDB, Webpack, Git, Jira, testing. Working
+          as a
+          freelancer
+          since late
+          2022. I have experience with OSM-based geodata and mapping (Mapshaper, QGIS). Before learning Javascript I
+          worked as an engineer at Beltelecom for more than 10 years.
+          Married with two children. Responsible, conscientious and self-organised.</p>
+      </section>
+      <section class="skills">
+        <h2 class="title skills__title" id="skills">Skills</h2>
+        <ul class="skills__list">
+          <li><svg class="icon-logo">
+              <use xlink:href="./assets/svg-png/sprite.svg#html"></use>
+            </svg>HTML</li>
+          <li><svg class="icon-logo icon-logo-1">
+              <use xlink:href="./assets/svg-png/sprite.svg#css"></use>
+            </svg>CSS, SCSS</li>
+          <li><svg class="icon-logo icon-logo-2">
+              <use xlink:href="./assets/svg-png/sprite.svg#js"></use>
+            </svg> <svg class="icon-logo icon-logo-4">
+              <use xlink:href="./assets/svg-png/sprite.svg#ts"></use>
+            </svg>JS/TS</li>
+          <li><svg class="icon-logo icon-logo-3">
+              <use xlink:href="./assets/svg-png/sprite.svg#react"></use>
+            </svg>React js</li>
+          <li><svg class="icon-logo icon-logo-8">
+              <use xlink:href="./assets/svg-png/sprite.svg#node"></use>
+            </svg>NodeJS</li>
+          <li><svg class="icon-logo icon-logo-5">
+              <use xlink:href="./assets/svg-png/sprite.svg#git"></use>
+            </svg>Git</li>
+          <li><svg class="icon-logo icon-logo-6">
+              <use xlink:href="./assets/svg-png/sprite.svg#webpack"></use>
+            </svg>Webpack</li>
+          <li><svg class="icon-logo icon-logo-7">
+              <use xlink:href="./assets/svg-png/sprite.svg#mongo"></use>
+            </svg>MongoDB</li>
+          <li><svg class="icon-logo icon-logo-9">
+              <use xlink:href="./assets/svg-png/sprite.svg#jest"></use>
+            </svg>Jest + React Testing Library</li>
+        </ul>
+      </section>
+      <section class="hobby">
+        <h2 class="title hobby__title" id="hobby">Hobby</h2>
+        <ul class="hobby__list">
+          <li>Active rest
+            <ul class="active__rest">
+              <li>kayaks</li>
+              <li>bicycles</li>
+              <li>volleyball</li>
+            </ul>
+          <li>RC cars</li>
+          <li>Fishing</li>
+        </ul>
+      </section>
+      <section class="projects">
+        <h2 class="title projects__title" id="projects">Projects</h2>
+        <ul>
+          <li class="project-li"><a href="https://rolling-scopes-school.github.io/oleegg-JSFEPRESCHOOL/game">little GAME
+              JS</a>
+          </li>
+          <li class="project-li"><a
+              href="https://rolling-scopes-school.github.io/oleegg-JSFEPRESCHOOL/portfolio/">Portfolio (RS
+              school-progect + <br>custom video player)</a>
+          </li>
+          <li class="project-li"><a
+              href="https://rolling-scopes-school.github.io/oleegg-JSFE2022Q1/shelter/pages/main">Shelter-site
+              in developing</a>
+          </li>
+          <li class="project-li">
+            <a href="https://oleegg.github.io/virtual-keyboard/src/">
+              Virtual keyboard</a>
+          </li>
+          <li class="project-li">
+            <a href="https://rolling-scopes-school.github.io/oleegg-JSFE2022Q1/race/">
+              Racing (Rest API) </a>
+            <p class="project-li-text">для работы приложения необходимо развернуть</p>
+            <a href="https://github.com/Oleegg/async-race-api-server"> сервер </a>
+          </li>
+          <li class="project-li">
+            <a href="https://rolling-scopes-school.github.io/oleegg-JSFE2022Q1/online-store/">
+              online-store and Filters</a>
+          </li>
+          <li class="project-li"><a href="https://rs-lang-2.netlify.app/">
+              RS lang (React) </a>
+          </li>
+        </ul>
+      </section>
+      <section class="education">
+        <h2 class="title education__title" id="education">Education</h2>
+        <p>College of mehenical-technology</p>
+        <p>Pedagogical university</p>
+        <a href="https://app.rs.school/certificate/vk4ud12h" class="education__certif-wrapp">
+          <p>preliminary level certificate</p>
+          <div class="education__certificate"></div>
+        </a>
+        <a href="https://app.rs.school/certificate/8zh94oxo" class="education__certif-wrapp">
+          <p>JS core course certificate</p>
+          <div class="education__certificate"></div>
+        </a>
+      </section>
+      <section class="languages">
+        <h2 class="title languages__title" id="languages">Languages</h2>
+        <ul class="languages__list">
+          <li>Russian - native</li>
+          <li>A2, I'm studying English</li>
+        </ul>
+      </section>
+    </div>
+  </main>
+  <footer class="footer">
+    <div class="wrapper">
+      <div class="footer__content">
+        <p>2020 <a class="github" href="https://github.com/Oleegg">Github</a></p>
+      </div>
+      <a href="#" class="icon-logo-arr"><svg>
+          <use xlink:href="./assets/svg-png/sprite.svg#arrow"></use>
+        </svg></a>
+    </div>
+  </footer>
+  <script src="./index.js"></script>
 </body>
 
 </html>
