change HTML file

--- a/index.html
+++ b/index.html
@@ -56,10 +56,8 @@
         <h2 class="title about__title" id="about">About me</h2>
         <p class="about__text">I've been studying Javascript since 2020, graduated from RSSchool frontend development
           course. Studied HTML, CSS/SCSS, JS/TS, React, NodeJS, PostgreSQL/MongoDB, Webpack, Git, Jira, testing. Working
-          as a
-          freelancer
-          since late
-          2022. I have experience with OSM-based geodata and mapping (Mapshaper, QGIS). Before learning Javascript I
+          as a freelancer since late 2022. I have experience with OSM-based geodata and mapping (Mapshaper, QGIS).
+          Before learning Javascript I
           worked as an engineer at Beltelecom for more than 10 years.
           Married with two children. Responsible, conscientious and self-organised.</p>
       </section>
