Add freelance project

--- a/index.html
+++ b/index.html
@@ -110,7 +110,9 @@
       </section>
       <section class="projects">
         <h2 class="title projects__title" id="projects">Projects</h2>
-        <ul>
+        <a class="project-link" href="https://crystalroof.co.uk/">Freelanced on this project</a>
+        <h4 class="projects__title__little">Projects during training</h4>
+        <ul class="projects__training">
           <li class="project-li"><a href="https://rolling-scopes-school.github.io/oleegg-JSFEPRESCHOOL/game">little GAME
               JS</a>
           </li>
