--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./styles/normalize.css">
   <link rel="stylesheet" href="./styles/style.css">
-  <title>Senko Oleg</title>
+  <title>Сенько Олег</title>
 </head>
 
 <body>
@@ -17,19 +17,19 @@
         <img class="my__photo" src="./assets/my-pfoto/i111.jpg" alt="my-photo">
         <div class="my__wrapp">
           <div class="title-wrapp">
-            <h1 class="my__name">Senko Oleg</h1>
+            <h1 class="my__name">Сенько Олег</h1>
             <h3 class="my__profession">Frontend Developer</h3>
           </div>
           <nav class="nav">
             <div class="bloor">
               <ul class="nav__links">
-                <li><a href="#contacts">Contacts</a></li>
-                <li><a href="#about">About me</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#hobby">Hobby</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#education">Education</a></li>
-                <li><a href="#languages">Languages</a></li>
+                <li><a href="#contacts">контакты</a></li>
+                <li><a href="#about">Обо мне</a></li>
+                <li><a href="#skills">Навыки</a></li>
+                <li><a href="#hobby">Хобби</a></li>
+                <li><a href="#projects">Проекты</a></li>
+                <li><a href="#education">Образование</a></li>
+                <li><a href="#languages">Языки</a></li>
               </ul>
             </div>
           </nav>
@@ -37,6 +37,9 @@
             <span class="burger__span"></span>
           </div>
         </div>
+        <!-- <div class="my__leng">
+          <button class="my__leng-btn">EN</button>
+        </div> -->
       </div>
 
     </div>
@@ -44,25 +47,33 @@
   <main class="main">
     <div class="wrapper main__wrapp">
       <section class="contacts">
-        <h2 class="title contacts__title" id="contacts">Contacts</h2>
+        <h2 class="title contacts__title" id="contacts">Контакты</h2>
         <ul class="contacts__list">
-          <li>Minsk Belarus</li>
-          <li>phone: +375 29 7631758 (Viber)</li>
+          <li>Минск Беларусь</li>
+          <li>телефон: +375 29 7631758 (Viber)</li>
           <li>email: senkooleg@gmail.com</li>
           <li>discord: OlegMinsk(@Oleegg)</li>
         </ul>
       </section>
       <section class="about">
-        <h2 class="title about__title" id="about">About me</h2>
-        <p class="about__text">I've been studying Javascript since 2020, graduated from RSSchool frontend development
+        <h2 class="title about__title" id="about">Обо мне</h2>
+        <p class="about__text">
+          <!-- I've been studying Javascript since 2020, graduated from RSSchool frontend development
           course. Studied HTML, CSS/SCSS, JS/TS, React, NodeJS, PostgreSQL/MongoDB, Webpack, Git, Jira, testing. Working
           as a freelancer since late 2022. I have experience with OSM-based geodata and mapping (Mapshaper, QGIS).
           Before learning Javascript I
           worked as an engineer at Beltelecom for more than 10 years.
-          Married with two children. Responsible, conscientious and self-organised.</p>
+          Married with two children. Responsible, conscientious and self-organised. -->
+          Я изучаю JavaScript c 2020 года. Закончил курсы RSSchool frontend development. Изучал HTML, CSS/SCSS, JS/TS,
+          React, NodeJS (express/Next), PostgreSQL/MongoDB, Webpack, Git, Jira, тестирование. С конца 2022 года работаю
+          на фрилансере. Имею опыт работы с геоданными и картографированием на основе OSM (OpenStreetMap, Mapshaper,
+          QGIS). До этого работал в Белтелекоме более 10 лет инженером. Занимался обслуживанием систем пожарной и
+          охранной сигнализации, систем видеонаблюдения, систем контроля доступа. Есть права категории В, С.
+          Женат, есть двое детей. Ответственный, добросовестный и самоорганизованный.
+        </p>
       </section>
       <section class="skills">
-        <h2 class="title skills__title" id="skills">Skills</h2>
+        <h2 class="title skills__title" id="skills">Навыки</h2>
         <ul class="skills__list">
           <li><svg class="icon-logo">
               <use xlink:href="./assets/svg-png/sprite.svg#html"></use>
@@ -96,20 +107,21 @@
         </ul>
       </section>
       <section class="hobby">
-        <h2 class="title hobby__title" id="hobby">Hobby</h2>
+        <h2 class="title hobby__title" id="hobby">Хобби</h2>
         <ul class="hobby__list">
-          <li>Active rest
+          <li>активный отдых
             <ul class="active__rest">
-              <li>kayaks</li>
-              <li>bicycles</li>
-              <li>volleyball</li>
+              <li>походы</li>
+              <li>байдарки</li>
+              <li>велосипед</li>
+              <li>воллейбол</li>
             </ul>
-          <li>RC cars</li>
-          <li>Fishing</li>
+          <li>машинки на радио управлении</li>
+          <li>рыбалка</li>
         </ul>
       </section>
       <section class="projects">
-        <h2 class="title projects__title" id="projects">Projects</h2>
+        <h2 class="title projects__title" id="projects">Проекты</h2>
         <a class="project-link" href="https://crystalroof.co.uk/">Freelanced on this project</a>
         <h4 class="projects__title__little">Projects during training</h4>
         <ul class="projects__training">
@@ -144,23 +156,23 @@
         </ul>
       </section>
       <section class="education">
-        <h2 class="title education__title" id="education">Education</h2>
-        <p>College of mehenical-technology</p>
-        <p>Pedagogical university</p>
+        <h2 class="title education__title" id="education">Образование</h2>
+        <p><!-- College of mehenical-technology -->Механико-технологический техникум</p>
+        <p><!-- Pedagogical university -->Педагогический университет</p>
         <a href="https://app.rs.school/certificate/vk4ud12h" class="education__certif-wrapp">
-          <p>preliminary level certificate</p>
+          <p><!-- preliminary level certificate -->сертификат предварительного обучения</p>
           <div class="education__certificate"></div>
         </a>
         <a href="https://app.rs.school/certificate/8zh94oxo" class="education__certif-wrapp">
-          <p>JS core course certificate</p>
+          <p>Сертификат полного курса JS</p>
           <div class="education__certificate"></div>
         </a>
       </section>
       <section class="languages">
-        <h2 class="title languages__title" id="languages">Languages</h2>
+        <h2 class="title languages__title" id="languages">Языки</h2>
         <ul class="languages__list">
-          <li>Russian - native</li>
-          <li>A2, I'm studying English</li>
+          <li><!-- Russian - native -->Русский - родной</li>
+          <li><!-- A2, I'm studying English -->Английский - на уровне чтения технической документации</li>
         </ul>
       </section>
     </div>
